# otusstreamprocessing

./: .dockerignore  .gitignore  README.md  install-istio.sh  skaffold.yaml
deployments/helm/affo/: Chart.yaml  values.yaml
deployments/helm/affo/charts/auth/: values.yaml
deployments/helm/affo/templates/: _helpers.tpl  configmap.yaml  istio-authentication.yaml  istio-gateway.yaml  istio-virtualservice.yaml  secrets.yaml
deployments/helm/prometheus/: operator-values.yaml
deployments/k8s/: namespaces.yaml
deployments/k8s/istio/: authentication.yaml  gateway.yaml  virtualservice.yaml
deployments/k8s/jaeger/: jaeger.yaml
deployments/k8s/kiali/: kiali.yaml
doc/event-collaboration/: asyncapi.yaml  sequence-diagram.mmd
doc/http-communication/: rest-openapi.yaml  sequence-diagram.mmd
doc/mb-notifications/: notification-asyncapi.yaml  rest-openapi.yaml  sequence-diagram.mmd
examples/helm/users/: secrets.dev.yaml  values.dev.yaml
py/lib/flask-kafka/: .isort.cfg  pyproject.toml
py/lib/flask-kafka/flask_kafka/: kafka.py
py/lib/schemas/: .isort.cfg  pyproject.toml
py/lib/schemas/schemas/: order.py  user.py
py/services/auth/: Dockerfile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
py/services/auth/auth/: application.py  extensions.py  settings.py  wsgi.py
py/services/auth/auth/api/: auth.py  jwks.py  jwt.py  probe.py
py/services/auth/auth/spec/: openapi.yaml
py/services/auth/tests/: conftest.py
py/services/auth/tests/functional/: conftest.py  test_jwks.py  test_jwt.py
py/services/billing/: .isort.cfg  Dockerfile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
py/services/billing/billing/: application.py  exception.py  extensions.py  settings.py  wsgi.py
py/services/billing/billing/api/: accounts.py  balance_transactions.py
py/services/billing/billing/migrations/versions/: 57a34cf95f99_.py
py/services/billing/billing/models/: account.py  balance_transaction.py
py/services/billing/billing/spec/: openapi.yaml
py/services/billing/billing/use_cases/: account.py  balance_transaction.py
py/services/billing/tests/: conftest.py
py/services/billing/tests/functional/: conftest.py  test_accounts.py  test_balance_transactions.py
py/services/notifications/: .isort.cfg  Dockerfile  pyproject.toml  pytest.ini
py/services/notifications/notifications/: main.py  middlewares.py  notificaiton.py  routes.py  settings.py  views.py
py/services/notifications/notifications/source/: adapters.py  kafka.py
py/services/notifications/tests/: conftest.py  test_pipeline.py
py/services/orders/: .isort.cfg  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
py/services/orders/orders/: application.py  exception.py  settings.py  wsgi.py
py/services/orders/tests/: conftest.py
py/services/users/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
py/services/users/tests/: conftest.py
py/services/users/users/: application.py  cli.py  exception.py  extensions.py  settings.py  wsgi.py
(+49 files in other folders)
