[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Aleksey Dalekin <adalekin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Authlib = "0.15.4"
connexion-buzz = "0.2.1"
connexion = "2.4.0"
cryptography = "3.4.6"
environs = "9.3.2"
Flask-Caching = "1.7.1"
gunicorn = "20.0.4"
py-buzz = "0.3.7"
sentry-sdk = {version = "0.7.10", extras = ["flask"]}
Werkzeug = "1.0.1"

[tool.poetry.dev-dependencies]
coverage = "4.5.1"
pytest-cov = "2.7.1"
pytest-dotenv = "0.5.0"
pytest-freezegun = "0.3.0.post1"
pytest-mock = "1.10.1"
pytest-toolbelt = "0.1.0"
pytest = "3.9.1"
requests-mock = "1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
