[tool.poetry]
name = "notifications"
version = "0.1.0"
description = ""
authors = ["Aleksey Dalekin <adalekin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
aiokafka = "^0.7.1"
environs = "^9.3.2"
schemas = {path = "../../lib/schemas"}
aiohttp = "^3.7.4"
aiohttp-jinja2 = "^1.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
coverage = "^5.5"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
